<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.forateq.mobileerp.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/main_view"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/my_company_layout"
                android:background="@color/tab_background"
                android:padding="5dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_account_circle_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/my_company"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:text="@string/my_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/my_company_layout"
                android:id="@+id/e_procurement_layout"
                android:layout_marginTop="2dp"
                android:background="@color/tab_background"
                android:padding="5dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_shopping_cart_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/e_procurement"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:text="@string/e_procurement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/e_procurement_layout"
                android:id="@+id/human_resource_layout"
                android:layout_marginTop="2dp"
                android:background="@color/tab_background"
                android:padding="5dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_group_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/human_resource"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:text="@string/human_resource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/human_resource_layout"
                android:id="@+id/crm_layout"
                android:layout_marginTop="2dp"
                android:background="@color/tab_background"
                android:padding="5dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_business_center_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/crm"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:text="@string/crm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_below="@+id/crm_layout"
                android:id="@+id/inventory_managemnt_layout"
                android:layout_marginTop="2dp"
                android:background="@color/tab_background"
                android:padding="5dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@mipmap/ic_assignment_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/inventory_management"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:text="@string/inventory_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/view_container"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"/>

</RelativeLayout>
